other/b-d/block-large-images/.kyverno-test/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: block-large-images
  rules:
  - name: block-over-twogi
    values:
      imageSize: 3Gi
